# pkg-defender

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  ruff.toml
.clusterfuzzlite/: Dockerfile  build.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/release-templates/: snapshot-body.md
.github/scripts/: build-release-notes.py  check-version.py  render-snapshot-body.py  sync-brew-formula.py
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  label-sync.yml  release.yml  scorecard.yml  snapshot.yml  stale.yml  sync-github-action.yml  sync-homebrew-tap.yml
Formula/: pkg-defender.rb
docs/: index.md
docs/examples/config/: pkgd.toml
docs/examples/github-actions/: pkg-defender-action.yml  pkg-defender-cli.yml
docs/examples/pre-commit/: .pre-commit-config.yaml
docs/explanation/: architecture.md  cooldown-system.md  interception-lifecycle.md  scoring.md  security-model.md
docs/guides/: ai-agent-integration.md  auditing.md  bypass.md  ci-cd.md  daemon.md  faq.md  intel-search.md  production-deployment.md  shell-integration.md  troubleshooting.md
docs/man/: pkgd.1  pkgd.1.md
docs/reference/: cli.md  configuration.md  data-dictionary.md  database-schema.md  environment-variables.md  error-messages.md  exit-codes.md  lock-file-formats.md  package-managers.md  performance.md  scoring-formula.md  threat-feeds.md  timestamp-resolution.md
docs/tutorials/: first-interception.md  getting-started.md
fuzz/: parse_lockfiles_fuzz.py
github-action/: .gitignore  CHANGELOG.md  README.md  action.yml  index.js  package-lock.json  package.json
github-action/.github/scripts/: build-action-release.py
github-action/.github/workflows/: ci.yml  release.yml
github-action/tests/: action.test.js  validate.sh
homebrew-tap/: .gitignore  LICENSE  README.md
homebrew-tap/.github/workflows/: tests.yml
homebrew-tap/Formula/: pkg-defender.rb
scripts/: add_spdx_headers.py  build_binary.sh  build_snapshot.py  pre-commit-check.sh  resolve-action-shas.py  smoke_test_release.py
scripts/data/: action-sha-mapping.json
src/pkg_defender/: __init__.py  __pkgd_entry__.py  _http.py  display.py  exceptions.py  logging_filter.py  version.py
src/pkg_defender/audit/: __init__.py  bypass_service.py  cooldown.py  errors.py  types.py  user_messages.py
src/pkg_defender/cli/: __init__.py  _ci_detect.py  _constants.py  _dependency_check.py  _exit_codes.py  _manager_constants.py  _param_types.py  _progress.py  banners.py  common.py  dispatcher.py  exec.py  group.py  main.py
src/pkg_defender/config/: __init__.py  settings.py
src/pkg_defender/core/: __init__.py  auditor.py  checker.py  parsers.py  registry_domains.py  scorer.py
src/pkg_defender/daemon/: __init__.py  runner.py  service.py
src/pkg_defender/db/: __init__.py  schema.py
src/pkg_defender/intel/: __init__.py  aggregator.py  base.py  extract.py  ghsa.py  mastodon.py  npm_advisory.py  ossf_malicious.py  reddit.py  rss_feed.py  socket.py  x_twitter.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: conftest.py
tests/integration/: conftest.py  test_daemon.py  test_fail_closed_install.py  test_first_run_flow.py  test_integration.py  test_scoring_e2e.py  test_smoke_e2e.py
tests/scripts/: test_render_snapshot_body.py
tests/unit/: conftest.py  test__http.py  test_init.py  test_logging_filter.py  test_unit_integration.py  test_version.py
(+209 files in other folders)
